# huffman-encoding

./: .gitignore  CMakeLists.txt  EncryptionCode.cpp  README.md  UI.cpp  huffmantree.cpp  huffmantree.h  i.txt  inputText.txt  instructions.txt  lorem.huff  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  priorityqueue.cpp  priorityqueue.h  tempCodeRunnerFile.h
.github/workflows/: run-tests.yml
GUI_bonus/file_zipper/: file_zipper.pro  file_zipper.pro.user.3e2a862  huffmantree.cpp  huffmantree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  priorityqueue.cpp  priorityqueue.h
Tests/: CMakeLists.txt  file_comparator_test.cpp
file_zipper/: huffmantree.cpp  huffmantree.cpp.autosave  huffmantree.h  priorityqueue.cpp  priorityqueue.h
lib/: priorityqueue.cpp  priorityqueue.h
